Trying to fix the control on mobile

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin:0;
     box-sizing:border-box;
 scroll-behavior: smooth;
+overflow-x: hidden;
 }
 /* 
 #load{
@@ -223,6 +224,15 @@ transition:0.5s;
   opacity:1;
   transition:0.3s;
 }
+
+.portfolio ul{
+  padding-left:0;
+}
+/* @media (max-width:600){
+  .control{
+    display:none;
+  }
+} */
 /* animation on scroll */
 
     /* .reveal{
